# venator

./: Cargo.toml  LICENSE  README.md
docs/: filter-syntax.md  interface.md
venator/: Cargo.toml  README.md
venator-app/: README.md  index.html  package-lock.json  package.json  vite.config.ts
venator-app/src/: App.css  App.tsx  index.tsx  invoke.tsx  models.tsx
venator-app/src-tauri/: .gitignore  Cargo.toml  README.md  build.rs  tauri.conf.json
venator-app/src-tauri/capabilities/: main.json
venator-app/src-tauri/icons/: icon.icns
venator-app/src-tauri/src/: commands.rs  ingress.rs  main.rs  views.rs
venator-app/src-tauri/src/ingress/: mod.rs  otel.rs  tracing.rs
venator-app/src-tauri/src/ingress/otel/: opentelemetry.proto.collector.logs.v1.rs  opentelemetry.proto.collector.metrics.v1.rs  opentelemetry.proto.collector.trace.v1.rs  opentelemetry.proto.common.v1.rs  opentelemetry.proto.logs.v1.rs  opentelemetry.proto.metrics.v1.rs
venator-app/src/components/: connection-graph.css  connection-graph.tsx  detail-pane.css  detail-pane.tsx  event-count-graph.css  event-count-graph.tsx  filter-input.css  filter-input.tsx  graph-container.css  graph-container.tsx  instance-graph.css  instance-graph.tsx  screen-header.css  screen-header.tsx  span-graph.css  span-graph.tsx  tab-bar.css  tab-bar.tsx  table.css  table.tsx  time-controls.css  time-controls.tsx  trace-graph.css  trace-graph.tsx
venator-app/src/context/: collapsable.ts  navigation.ts
venator-app/src/screens/: connections-screen.css  connections-screen.tsx  events-screen.css  events-screen.tsx  instances-screen.css  instances-screen.tsx  spans-screen.css  spans-screen.tsx  trace-screen.css  trace-screen.tsx
venator-app/src/utils/: datalayer.ts  undo.ts
venator-engine/: .gitignore  Cargo.toml  README.md
venator-engine/benches/: my_benchmark.rs
venator-engine/src/: filter.rs  index.rs  lib.rs  models.rs  subscription.rs
venator-engine/src/context/: event_context.rs  mod.rs  span_context.rs
venator-engine/src/engine/: async_engine.rs  mod.rs  sync_engine.rs
venator-engine/src/filter/: attribute.rs  event_filter.rs  input.rs  mod.rs  span_filter.rs  util.rs  value.rs
venator-engine/src/index/: attribute.rs  event_indexes.rs  level.rs  mod.rs  span_event_indexes.rs  span_indexes.rs  util.rs  value.rs
venator-engine/src/storage/: batched.rs  cached.rs  file.rs  mod.rs  transient.rs
venator-engine/src/storage/file/: db_model.rs
venator-engine/src/util/: iter_advance_until.rs  iter_compound_index.rs  iter_double_ended_peekable.rs  iter_index.rs  iter_set_intersection.rs  iter_set_union.rs  mod.rs  opt_merge.rs  slice_bound_search.rs  slice_remove_sorted.rs
venator/src/: attributes.rs  fields.rs  ids.rs  lib.rs  messaging.rs
