[package]
name = "venator-engine"
version = "0.3.0"
edition = "2021"
description = "The core functionality that drives the Venator app"
readme = "README.md"
repository = "https://github.com/kmdreko/venator"
license = "MIT"
keywords = ["logging", "tracing", "opentelemetry", "profiling"]

[features]
default = []
persist = ["dep:rusqlite", "dep:serde_json"]

[dependencies]
anyhow = "1.0.95"
bincode = { version = "1.3.3", default-features = false }
futures = { version = "0.3.30", default-features = false, features = ["executor"] }
lru = "0.12.5"
nom = "7.1.3"
regex = "1.10.6"
rusqlite = { version = "0.31.0", features = ["bundled"], optional = true}
serde = { version = "1.0.159", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1.0.120", optional = true }
serde_repr = "0.1.19"
tokio = { version = "1.38.0", features = ["rt", "sync", "macros"] }
tracing = "0.1.41"
wildcard = "0.2.0"
