[package]
name = "venator"
version = "0.1.0"
edition = "2021"
description = "A tracing layer for exporting logs and spans to the Venator app"
readme = "README.md"
repository = "https://github.com/kmdreko/venator"
license = "MIT"
keywords = ["tracing"]

[dependencies]
bincode = { version = "1.3.3", default-features = false }
serde = { version = "1.0.159", default-features = false, features = ["std", "derive"] }
tracing = { version = "0.1.37", default-features = false }
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["std", "registry"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["std", "registry", "fmt", "env-filter"] }