[package]
name = "venator"
version = "1.1.0"
edition = "2021"
description = "A tracing layer for exporting logs and spans to the Venator app"
readme = "README.md"
repository = "https://github.com/kmdreko/venator"
license = "MIT"
keywords = ["logging", "tracing", "profiling"]

[features]
default = ["record-128s"]
record-128s = [] # requires tracing v0.1.36+

[dependencies]
bincode = { version = "1.3.3", default-features = false }
serde = { version = "1.0.159", default-features = false, features = ["std", "derive"] }
thread-id = "5.0.0"
tracing = { version = "0.1.0", default-features = false }
tracing-core = { version = "0.1.20", default-features = false }
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["std", "registry"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["std", "registry", "fmt", "env-filter"] }
