[package]
name = "venator-app"
version = "0.2.0"
edition = "2021"
description = "A log and trace viewer for Rust tracing"
readme = "README.md"
repository = "https://github.com/kmdreko/venator"
license = "MIT"
keywords = ["tracing"]
include = ["/src", "/build.rs", "/tauri.conf.json", "/icons", "/gen", "/capabilities", "/dist"]

[[bin]]
name = "venator"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = true
strip = true

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
bincode = { version = "1.3.3", default-features = false }
clap = { version = "4.5.20", features = ["derive"] }
directories = "5.0.1"
open = "5.3.0"
tauri = { version = "2.0.1", features = [] }
tauri-plugin-clipboard-manager = "2.0.1"
tauri-plugin-dialog = "2.0.1"
tauri-plugin-fs = "2.0.1"
serde = { version = "1.0.159", default-features = false, features = ["std", "derive"] }
serde_json = "1"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros", "net"] }

venator-engine = { version = "0.2.0", features = ["persist"] }

[features]
default = ["custom-protocol"]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
