[package]
name = "venator-app"
version = "1.0.2"
edition = "2021"
description = "A log and trace viewer for Rust tracing and OpenTelemetry"
readme = "README.md"
repository = "https://github.com/kmdreko/venator"
license = "MIT"
keywords = ["logging", "tracing", "opentelemetry", "profiling"]
include = ["/src", "/build.rs", "/tauri.conf.json", "/icons", "/gen", "/capabilities", "/dist"]

[[bin]]
name = "venator"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.7.9", default-features = false, features = ["http1", "http2", "tokio"] }
bincode = { version = "1.3.3", default-features = false }
clap = { version = "4.5.20", features = ["derive"] }
directories = "5.0.1"
futures = { version = "0.3.31", default-features = false }
http-body = "1.0.1"
open = "5.3.0"
opentelemetry-proto = { version = "0.27.0", features = ["gen-tonic-messages", "logs", "metrics", "trace"] }
prost = "0.13.3"
tauri = { version = "2.0.1", features = [] }
tauri-plugin-clipboard-manager = "2.0.1"
tauri-plugin-dialog = "2.0.1"
tauri-plugin-fs = "2.0.1"
serde = { version = "1.0.159", default-features = false, features = ["std", "derive"] }
serde_json = "1"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros", "net"] }
tokio-util = { version = "0.7.13", features = ["io"] }
tonic = "0.12.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }

venator-engine = { version = "0.4.1", features = ["persist"] }

[features]
default = ["custom-protocol"]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
